--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ a {
 /* Responsive cho mobile */
 @media (max-width: 768px) {
     .navbar {
-        padding: 20px 10px;
+        padding: 10px 10px;
     }
 }
 
@@ -133,7 +133,7 @@ a {
 .navbar ul a {
     color: #FFF;
     margin: 0 10px;
-    font-size: clamp(0.7rem, 3vw, 1.5rem);
+    font-size: 1.5rem;
     font-weight: 300;
     /* Lighter weight for nav links */
     padding-bottom: 5px;
@@ -142,6 +142,13 @@ a {
     /* Prepare for hover border */
     transition: border-color 0.3s ease;
     /* Smooth transition for border */
+}
+
+/* Responsive cho mobile */
+@media (max-width: 768px) {
+    .navbar ul a  {
+        font-size: 1rem; 
+    }
 }
 
 .navbar ul a:hover {
@@ -685,13 +692,37 @@ body {
 }
 
 @media (max-width: 768px) {
+
+    .footer {
+        padding-top: 30px;
+        margin-top: 30px;
+    }
+
+    .footer h3 {
+        font-size: 1.3rem;
+        color: #ffffff;
+        font-weight: 600;
+        margin-bottom: 10px;
+        text-align: left;
+    }
+
+    .footer p {
+        font-size: 1.2rem;
+    }
+
     .footer-container {
         grid-template-columns: 1fr;
-        gap: 30px;
+        gap: 20px;
         padding-bottom: 30px;
+        padding: 0 0px 20px;
     }
 
     .footer h3 {
         margin-bottom: 15px;
+    }
+    .footer-links li {
+        margin-bottom: 10px;
+        text-align: left;
+        font-size: 1.2rem;
     }
 }
