--- a/assets/css/style-question.css
+++ b/assets/css/style-question.css
@@ -306,11 +306,15 @@ a {
     font-size: 1.8rem;
     margin: 10px 0;
     display: inline-block;
+    
 }
 
 @media (max-width: 768px) {
     .detail-answer {
         font-size: 1.2rem;
+        padding: 0;
+        border: none;
+        box-shadow: none;
     }
 
     .detail-answer b {
