--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ a {
 /* Responsive cho mobile */
 @media (max-width: 768px) {
     .navbar {
-        padding: 10px 10px;
+        padding: 10 10px;
     }
 }
 
