--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ a {
 /* Responsive cho mobile */
 @media (max-width: 768px) {
     .navbar {
-        padding: 10 10px;
+        padding: 10px 10px;
     }
 }
 
@@ -128,12 +128,13 @@ a {
 
 .navbar ul {
     display: flex;
+    justify-content: center;
 }
 
 .navbar ul a {
     color: #FFF;
     margin: 0 10px;
-    font-size: 1.5rem;
+    font-size: clamp(0.7rem, 3vw, 1.5rem);
     font-weight: 300;
     /* Lighter weight for nav links */
     padding-bottom: 5px;
@@ -144,10 +145,9 @@ a {
     /* Smooth transition for border */
 }
 
-/* Responsive cho mobile */
 @media (max-width: 768px) {
-    .navbar ul a  {
-        font-size: 1rem; 
+    .navbar ul a {
+        font-size: 1rem;
     }
 }
 
@@ -166,6 +166,7 @@ a {
 
 .navbar .brand {
     margin-left: auto;
+    display: none;
 }
 
 .navbar .brand a {
@@ -174,6 +175,17 @@ a {
     font-weight: 300;
 
 }
+
+.menu-toggle {
+    display: none;
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    background: none;
+    border: none;
+    z-index: 100;
+}
+
 
 .hero {
     display: flex;
@@ -697,6 +709,53 @@ body {
 }
 
 @media (max-width: 768px) {
+
+    .navbar {
+        justify-content: space-between;
+    }
+
+    .navbar ul {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 250px;
+        background-color: rgba(0, 0, 0, 0.9);
+        flex-direction: column;
+        padding: 4rem 2rem;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+        z-index: 99;
+    }
+
+    .navbar ul.active {
+        display: flex;
+        transform: translateX(0);
+    }
+
+    .navbar ul li {
+        margin: 1rem 0;
+    }
+
+    .navbar ul a {
+        font-size: 1.8rem;
+        margin: 0;
+    }
+
+    .navbar .action {
+        margin-left: 0;
+        margin-top: 2rem;
+    }
+
+    .navbar .brand {
+        margin-left: 0;
+        display: block;
+        
+    }
+    .menu-toggle {
+        display: block;
+    }
 
     .footer {
         padding-top: 30px;
