--- a/assets/css/style-question.css
+++ b/assets/css/style-question.css
@@ -174,6 +174,7 @@ a {
 
 .navbar .brand {
     margin-left: auto;
+    display: none;
 }
 
 .navbar .brand a {
@@ -181,6 +182,16 @@ a {
     margin: 0 16px;
     font-weight: 300;
 
+}
+
+.menu-toggle {
+    display: none;
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    background: none;
+    border: none;
+    z-index: 100;
 }
 
 
@@ -522,6 +533,53 @@ a {
 }
 
 @media (max-width: 768px) {
+
+    .navbar {
+        justify-content: space-between;
+    }
+
+    .navbar ul {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 250px;
+        background-color: rgba(0, 0, 0, 0.9);
+        flex-direction: column;
+        padding: 4rem 2rem;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+        z-index: 99;
+    }
+
+    .navbar ul.active {
+        display: flex;
+        transform: translateX(0);
+    }
+
+    .navbar ul li {
+        margin: 1rem 0;
+    }
+
+    .navbar ul a {
+        font-size: 1.8rem;
+        margin: 0;
+    }
+
+    .navbar .action {
+        margin-left: 0;
+        margin-top: 2rem;
+    }
+
+    .navbar .brand {
+        margin-left: 0;
+        display: block;
+        
+    }
+    .menu-toggle {
+        display: block;
+    }
 
     .footer {
         padding-top: 30px;
