--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -785,6 +785,18 @@ body {
 .footer-contact p a {
     word-break: break-all;
 }
+.footer-contact .logo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    gap: 10px;
+}
+.footer-contact .logo img{
+    aspect-ratio: 1,1;
+    height: 50px;
+    border-radius: 50%;
+}
 
 .footer-bottom {
     background-color: #233140;
